--- a/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
@@ -382,7 +382,7 @@ SubmittedLeadScreen As screen:
                     PaddingBottom: =0
                     PaddingTop: =0
                     Size: =If(Parent.Width<378,11,Parent.Width<500,12,14)
-                    Width: =Parent.Width/1.08
+                    Width: =Parent.Width/1.2
                     X: =10
                     Y: =htmltextContractNumberSLS.Y+htmltextContractNumberSLS.Height
                     ZIndex: =2
@@ -397,7 +397,7 @@ SubmittedLeadScreen As screen:
                     PaddingBottom: =0
                     PaddingTop: =0
                     Size: =If(Parent.Width<378,11,Parent.Width<500,12,14)
-                    Width: =Parent.Width/1.08
+                    Width: =Parent.Width/1.2
                     X: =10
                     Y: =20
                     ZIndex: =3
@@ -494,7 +494,7 @@ SubmittedLeadScreen As screen:
                     PaddingBottom: =0
                     PaddingTop: =0
                     Size: =If(Parent.Width<378,11,Parent.Width<500,12,14)
-                    Width: =Parent.Width/1.08
+                    Width: =Parent.Width/1.2
                     X: =10
                     Y: =htmltextTrackingNumberSLS.Y+htmltextTrackingNumberSLS.Height
                     ZIndex: =8
@@ -510,7 +510,9 @@ SubmittedLeadScreen As screen:
                         Set(VarLtdTrackingnumber,ThisItem.LeadTrackingNumber);
                         Set(VarLtdCntNumber,ThisItem.'ContractNumber ');
                         Set(VarLtdID,ThisItem.ID);
-                    Visible: =If(Header="Rejected",false,true)
+                    Visible: |-
+                        =//If(Header="Rejected",false,true)
+                        false
                     Width: =If(Parent.Width>1000,Parent.Width/20,Parent.Width/15)
                     X: =Parent.Width-2.5*(Self.Width)
                     Y: =htmltextTrackingNumberSLS.Y
@@ -550,18 +552,32 @@ SubmittedLeadScreen As screen:
                     Y: =htmltxtDateSLS.Y+htmltxtDateSLS.Height
                     ZIndex: =11
 
+                Image2 As image:
+                    Height: =If(Parent.Width>1000,Parent.TemplateHeight/3,Parent.TemplateHeight/4)
+                    Image: ='mailtripti (1)'
+                    OnSelect: |
+                        =Navigate(ChatScreen);
+                        Set(VarLtdName,ThisItem.'BuildingName ');
+                        Set(VarLtdTrackingnumber,ThisItem.LeadTrackingNumber);
+                        Set(VarLtdCntNumber,ThisItem.'ContractNumber ');
+                        Set(VarLtdID,ThisItem.ID);
+                    Width: =If(Parent.Width>1000,Parent.Width/20,Parent.Width/15)
+                    X: =Parent.Width-2.5*(Self.Width)
+                    Y: =htmltextTrackingNumberSLS.Y
+                    ZIndex: =12
+
                 Circle1 As circle:
-                    BorderColor: =RGBA(255, 191, 0, 1)
+                    BorderColor: =RGBA(255, 0, 0, 1)
                     BorderThickness: =1
                     DisplayMode: =DisplayMode.View
-                    Fill: =RGBA(255, 191, 0, 1)
+                    Fill: =RGBA(255, 0, 0, 1)
                     Height: =13
                     OnSelect: =Select(Parent)
                     Visible: =If(CountRows(Filter(LeadChats,LeadInformationLID.ID =ThisItem.ID && 'Read '='Read  (LeadChats)'.No && IsQQApp='IsQQApp (LeadChats)'.Yes && LeadInformationLID.LeadStatus=Header))=0,false,true)
                     Width: =13
                     X: =iconmsgSLS.X+iconmsgSLS.Width/1.2
                     Y: =iconmsgSLS.Y+iconmsgSLS.Height/4.2
-                    ZIndex: =12
+                    ZIndex: =13
 
     grpMenuSLS As group:
         Height: =5
